<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/slot_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/car_one"
            app:layout_constraintBaseline_toBaselineOf="@+id/car_two" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/car_two"/>
    <Button
            android:text="@string/slot_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/car_two"
            app:layout_constraintStart_toEndOf="@+id/car_one"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/car_three"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/slot_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/car_three"
            app:layout_constraintBaseline_toBaselineOf="@+id/car_two"
            app:layout_constraintStart_toEndOf="@+id/car_two" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/name_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/car_two" android:hint="@string/box1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/license_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/name_text" android:hint="@string/box2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/brand_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/license_text" android:hint="@string/box3"/>
    <Button
            android:text="UPDATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="371dp"
            tools:layout_editor_absoluteX="66dp" android:id="@+id/update"/>
    <Button
            android:text="DELETE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="371dp"
            tools:layout_editor_absoluteX="259dp" android:id="@+id/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>